app/components/Collapse.css
.collapsible {
  width: 100%;
  background-color: transparent;
}

.collapsible-button {
  width: 100%;
  padding: 12px;
  background-color: #3a3a45;
  color: white;
  border: none;
  border-radius: 4px 4px 0 0;
  cursor: pointer;
  text-align: left;
}

.collapsible-button:focus {
  outline: none;
}

.collapsible-content {
  max-height: 200px; /* Adjust as needed */
  overflow-y: auto; /* Scroll vertically */
  transition: max-height 0.4s ease-out;
  padding: 0 12px;
}

.collapsible-content.active {
  max-height: 0px; /* Adjust as needed */
  padding: 12px;
}

.collapsible-content p {
  margin: 0;
}

